--- a/rdmo_chatbot/templates/projects/project_interview.html
+++ b/rdmo_chatbot/templates/projects/project_interview.html
@@ -32,7 +32,16 @@
 {% endblock %}
 
 {% block extra_body %}
-    <div id="chatbot" class="chatbot">
-        <button type="button" class="btn btn-primary">?</button>
-    </div>
+    <script src="http://localhost:8080/copilot/index.js"></script>
+    <script>
+        window.addEventListener("chainlit-call-fn", (e) => {
+            const { name, args, callback } = e.detail;
+            callback("You sent: " + args.msg);
+        });
+    </script>
+    <script>
+        window.mountChainlitWidget({
+            chainlitServer: "http://localhost:8000",
+        });
+    </script>
 {% endblock %}
