Refactor LangChainAdapter, remove RunnableMap, add simple memory_store to preserve chat history, refactor settings, refactor context fetching

--- a/rdmo_chatbot/plugin/templates/projects/project_interview.html
+++ b/rdmo_chatbot/plugin/templates/projects/project_interview.html
@@ -37,9 +37,7 @@
         window.addEventListener("chainlit-call-fn", (e) => {
             const { name, args, callback } = e.detail;
             if (name == 'getContext') {
-                callback({
-                    project: "{% chatbot_project project %}"
-                });
+                callback("{% chatbot_context project=project %}")
             }
         });
     </script>
