Refactor on_transfer and on_contact to be handled in the plugin

--- a/rdmo_chatbot/plugin/templates/projects/project_interview.html
+++ b/rdmo_chatbot/plugin/templates/projects/project_interview.html
@@ -32,6 +32,8 @@
 {% endblock %}
 
 {% block extra_body %}
+    {% include 'chatbot/contact_modal.html' %}
+
     <script src="{{ settings.CHATBOT_URL }}/copilot/index.js"></script>
     <script src="{% static 'chatbot/js/copilot.js' %}"></script>
     <script>
