--- a/rdmo_chatbot/plugin/templates/chatbot/contact_modal.html
+++ b/rdmo_chatbot/plugin/templates/chatbot/contact_modal.html
@@ -10,7 +10,10 @@
                 <h2 class="modal-title">{% trans 'Contact support' %}</h2>
             </div>
             <div class="modal-body">
-                <p>{% trans 'You can use this form to send an email to the example.com support.' %}
+                <p>
+                    {% blocktrans trimmed with site_name=request.site.name %}
+                    You can use this form to send an email to the {{ site_name }} support.
+                    {% endblocktrans %}
                 </p>
 
                 <form>
@@ -19,7 +22,7 @@
                         <input type="text" id="chatbot-contact-subject" class="form-control">
                     </div>
                     <div class="form-group">
-                        <label for="chatbot-contact-message">Message</label>
+                        <label for="chatbot-contact-message">{% trans 'Message' %}</label>
                         <textarea rows="12" id="chatbot-contact-message" class="form-control"></textarea>
                     </div>
                 </form>
