Fix on_contact and add start message

--- a/rdmo_chatbot/plugin/templates/chatbot/contact_modal.html
+++ b/rdmo_chatbot/plugin/templates/chatbot/contact_modal.html
@@ -12,7 +12,7 @@
             <div class="modal-body">
                 <p>
                     {% blocktrans trimmed with site_name=request.site.name %}
-                    You can use this form to send an email to the {{ site_name }} support.
+                    You can email your chat history the {{ site_name }} support for further assistance.
                     {% endblocktrans %}
                 </p>
 
