Add label to copilot button

--- a/rdmo_chatbot/plugin/static/chatbot/css/copilot.css
+++ b/rdmo_chatbot/plugin/static/chatbot/css/copilot.css
@@ -74,3 +74,9 @@
 .watermark {
     display: none !important;
 }
+
+/* adust the copilot button text */
+
+.copilot-button-label {
+    font-size: 14px;
+}
