--- a/rdmo_chatbot/plugin/templates/projects/project_interview.html
+++ b/rdmo_chatbot/plugin/templates/projects/project_interview.html
@@ -34,6 +34,7 @@
 {% block extra_body %}
     {% include 'chatbot/contact_modal.html' %}
 
+    <template id="copilot-button-label-template">{% render_lang_template "chatbot/chatbot_label" %}</template>
     <script src="{{ settings.CHATBOT_URL }}/copilot/index.js"></script>
     <script src="{% static 'chatbot/js/copilot.js' %}"></script>
     <script>
