--- a/rdmo_chatbot/plugin/static/chatbot/css/copilot.css
+++ b/rdmo_chatbot/plugin/static/chatbot/css/copilot.css
@@ -45,28 +45,18 @@
 
 /* adjust the action buttons */
 
-.ai-message button {
-    font-size: 14px;
-    height: 1.5em;
-}
-.ai-message button svg {
-    width: 1em;
-    height: 1em;
-}
-.ai-message button:has(svg.lucide-check),
-.ai-message button:has(svg.lucide-x) {
-    height: 3em;
-}
 .ai-message button:has(svg.lucide-check) svg {
     stroke: #198754;
 }
 .ai-message button:has(svg.lucide-x) svg {
     stroke: #dc3545;
 }
-.ai-message button:has(svg.lucide-check) svg,
-.ai-message button:has(svg.lucide-x) svg {
+.ai-message button svg {
     width: 2em;
     height: 2em;
+}
+.ai-message button:first-child {
+    margin-right: .5rem;
 }
 
 /* remove the watermark at the bottom of the copilot */
